Update composer.json to a fixed version.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockcypher/php-client",
+  "name": "blockcypher/php-client_v150",
   "description": "BlockCypher's PHP SDK for REST API",
   "keywords": [
     "blockcypher",
